<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Project1.4</string>
    <string name="star"> *</string>
    <string name="seeking_type">  Typ hier</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="matchesText">Matches</string>
    <string name="chatText">Chats</string>
    <string name="profielText">Profiel</string>
    <string name="title_all_matches">Bekijk hier uw mogelijke matches</string>
    <string name="filter_all_matches">Filter</string>
    <string name="chat_username">Username</string>
    <string name="chat_message">Hallo, hoe gaat het?</string>
    <string name="chat_reaction">Hallo, met mij gaat het goed!</string>
    <string name="login_welcome">Welkom!</string>
    <string name="login_info">Voer hier uw gegevens in:</string>
    <string name="login_email">E-mailadres</string>
    <string name="login_password">Wachtwoord</string>
    <string name="login_login">Login</string>
    <string name="login_emptyEmail">Vul een Emailadres in</string>
    <string name="login_emptyPassword">Vul een wachtwoord in</string>
    <string name="login_incorrectData">inloggegevens zijn onjuist</string>
    <string name="login_or">Of:</string>
    <string name="login_makeAccount">Maak een account aan</string>
    <string name="main_title">Op zoek naar een leuke huisgenoot?</string>
    <string name="main_info">Heb je een kamer nodig of een kamer vrij en ben je op zoek naar een leuke huisgenoot? Dan is Mijn Woongenoot de ideale keuze voor jou!</string>
    <string name="main_moreInfo">Wil je meer informatie?</string>
    <string name="main_link">Klik dan hier!</string>
    <string name="main_button">Ga Verder</string>
    <string name="options_contact">Contact:</string>
    <string name="options_phone">Telefoon:</string>
    <string name="option_phoneNumber">06 11120415</string>
    <string name="options_email">Email:</string>
    <string name="option_emailLink">info@mijnwo\nongenoot.nl</string>
    <string name="options_language">Taal:</string>
    <string name="options_theme">Thema:</string>
    <string name="options_themeLight">Licht</string>
    <string name="options_themeDark">Donker</string>
    <string name="options_logOut">Log uit</string>
    <string name="options_phoneNo">Nee</string>
    <string name="options_phoneTitle">Telefoonnummer zichtbaar:</string>
    <string name="options_phoneYes">Ja</string>
    <string name="options_link">Klik hier voor de Privacyverklaring</string>
    <string name="role_provider">IK HEB EEN WOONRUIMTE BESCHIKBAAR</string>
    <string name="role_seeking">IK ZOEK EEN WOONRUIMTE</string>
    <string name="form_backBtn">Terug</string>
    <string name="form_nextBtn">Vooruit</string>
    <string name="popup_seekingTitle">Hier kan je filteren op matches:</string>
    <string name="pop_seekingFirstAid">EHBO</string>
    <string name="popup_seekingCare">BHV</string>
    <string name="popup_seekingReanimation">Reanimatie</string>
    <string name="popup_seekingPetsYes">Ja</string>
    <string name="popup_seekingPetsNo">Nee</string>
    <string name="popup_seekingGenderMan">Man</string>
    <string name="popup_seekingGenderWoman">Vrouw</string>
    <string name="popup_seekingGenderDifferent">Anders</string>
    <string name="popup_seekingGender">Geslacht:</string>
    <string name="popup_seekingHelp">Licentie:</string>
    <string name="popup_seekingPets">Huisdieren:</string>
    <string name="popup_seekingSave">Opslaan</string>
    <string name="popup_providerTitle">Hier kan je filteren op matches:</string>
    <string name="popup_providerPets">Huisdieren:</string>
    <string name="popup_providerFurnished">Gemeubileerd:</string>
    <string name="popup_providerMonths">Hoeveel maanden:</string>
    <string name="popup_providerDays">Hoeveel dagen:</string>
    <string name="popup_providerSituation">Woonsituatie:</string>
    <string name="popup_providerSize">Min. kamer \nin M2:</string>
    <string name="popup_providerCosts">Max kosten \nin Euro:</string>
    <string name="popup_providerPetsYes">Ja</string>
    <string name="popup_providerPetsNo">Nee</string>
    <string name="popup_providerFurnishedYes">Ja</string>
    <string name="popup_providerFurnishedNo">Nee</string>
    <string name="popup_providerSave">Opslaan</string>
    <string name="provider_belief">Wat is je geloofs/levensovertuiging?</string>
    <string name="provider_otherComment">Wat wil je verder aan ons kwijt?</string>
    <string name="provider_type">  Typ hier</string>
    <string name="provider_roomSizeHint">  M2</string>
    <string name="provider_roomSize">Hoe groot is deze ruimte?</string>
    <string name="provider_furnished">Is de woonruimte/kamer gemeubileerd?</string>
    <string name="provider_furnishedExtra">Zo ja, licht toe:</string>
    <string name="provider_roomPrice">Heeft u zelf al een prijs in gedachten?</string>
    <string name="provider_furnishedHint">  Bijvoorbeeld: Bed, bank</string>
    <string name="provider_priceHint">  €1000,-</string>
    <string name="provider_furnishedYes">Ja</string>
    <string name="provider_furnishedNo">Nee</string>
    <string name="provider_PictureRoom">Voeg hier een foto van de woning in:</string>
    <string name="provider_roomDays">Hoeveel nachten per week wil je de woonruimte aanbieden?</string>
    <string name="provider_roomMonths">Hoe lang wilt u (bij voorkeur) woonruimte aanbieden aan de woningzoekende?</string>
    <string name="provider_roomHint">  Bijvoorbeeld: slaapkamer</string>
    <string name="provider_roomType">Wat voor een woonruimte heb je over voor de woningzoekende voor privegebruik?</string>
    <string name="provider_addPicture">Voeg foto toe</string>
    <string name="provider_comment">Opmerkingen:</string>
    <string name="provider_checkTruth">Ik verklaar dit formulier naar waarheid te hebben ingevuld.</string>
    <string name="provider_checkPicture">Ik geef toestemming aan MijnWoongenoot om mijn foto te gebruiken voor de matching.</string>
    <string name="provider_checkPrivacy">Ik ga akkoord met de algemene voorwaarden en het privacy- en cookiebeleid</string>
    <string name="provider_linkPrivacy">Klik hier voor de privacyverklaring</string>
    <string name="privacy_linkCookie">Klik hier voor het cookiebeleid</string>
    <string name="provider_send">Opsturen</string>
    <string name="provider_passwordHint">  ********</string>
    <string name="provider_lastNameHint">  Achternaam</string>
    <string name="provider_firstNameHint">  Voornaam</string>
    <string name="provider_infixHint">  Tussenvoegsel</string>
    <string name="provider_profilePictureBtn">Upload</string>
    <string name="provider_salutation">Aanhef:</string>
    <string name="provider_profilePicture">Upload uw foto:</string>
    <string name="provider_title">Inschrijving beschikbare woonruimte</string>
    <string name="provider_firstName">Voornaam:</string>
    <string name="provider_infix">Tussenvoegsel:</string>
    <string name="provider_lastName">Achternaam:</string>
    <string name="provider_password">Wachtwoord:</string>
    <string name="provider_passwordAgain">Wachtwoord nogmaals:</string>
    <string name="provider_email">Emailadres:</string>
    <string name="provider_emailHint">  Emailadres</string>
    <string name="provider_keywordHint">  Bijvoorbeeld: grappig, slim</string>
    <string name="provider_keyword">Omschrijf jezelf in enkele steekwoorden</string>
    <string name="provider_hobby">Wat zijn je hobbies?</string>
    <string name="provider_work">Heb je werk?</string>
    <string name="provider_workYes">Ja</string>
    <string name="provider_workNo">Nee</string>
    <string name="provider_workComment">Zo ja, wat en hoeveel uur per week?</string>
    <string name="provider_workCommentHint">  Bijvoorbeeld: programmeur</string>
    <string name="provider_hobbyHint">  Bijvoorbeeld: wandelen</string>
    <string name="provider_petCommentHint">  Bijvoorbeeld: hond</string>
    <string name="provider_petComment">Zo ja, welke?</string>
    <string name="providerPetsYes">Ja</string>
    <string name="providerPetsNo">Nee</string>
    <string name="providerPets">Heb je huisdieren?</string>
    <string name="provider_mean">Wat zou een woongenoot voor jou kunnen betekenen/doen?</string>
    <string name="provider_note">Waar moeten we zeker rekening mee houden?</string>
    <string name="provider_volunteer">Heb je ervaring met vrijwilligerswerk?</string>
    <string name="provider_noteComment">Zo ja, vertel hier kort over:</string>
    <string name="provider_meanHint">  Bijvoorbeeld: klusjes doen</string>
    <string name="provider_noteHint">  Bijvoorbeeld: notenallergie</string>
    <string name="provider_volunteerYes">Ja</string>
    <string name="provider_volunteerNo">Nee</string>
    <string name="provider_situation">Woonsituatie:</string>
    <string name="provider_found">Hoe heeft u MijnWoongenoot gevonden?</string>
    <string name="provider_bought">Heeft u een koopwoning?</string>
    <string name="provider_boughtYes">Ja</string>
    <string name="provider_boughtNo">Nee</string>
    <string name="provider_foundHint">  Bijvoorbeeld: via vrienden</string>
    <string name="provider_reasonHint">Bijvoorbeeld: om meer gezelschap te hebben</string>
    <string name="provider_reason">Wat is uw motivatie om een kamer aan te bieden aan een woningzoekende/student?</string>
    <string name="provider_birthHint">  DD-MM-JJJJ</string>
    <string name="provider_phoneNumber">Telefoonnummer:</string>
    <string name="provider_streetHint">  Straat</string>
    <string name="provider_cityHint">  Woonplaats</string>
    <string name="provider_codeHint">  Postcode</string>
    <string name="provider_houseNumberHint">  Huisnummer</string>
    <string name="provider_countryHint">  Land</string>
    <string name="provider_phoneNumberHint">  Telefoonnummer</string>
    <string name="provider_street">Straat:</string>
    <string name="provider_city">Woonplaats:</string>
    <string name="provider_code">Postcode:</string>
    <string name="provider_houseNumber">Huisnummer:</string>
    <string name="provider_country">Land:</string>
    <string name="provider_birth">Geboortedatum:</string>
    <string name="seeking_mean">Wat zou je woongenoot naast het bieden van een woonruimte voor jou kunnen betekenen?</string>
    <string name="seeking_startDate">Gewenste startdatum:</string>
    <string name="seeking_endDate">Gewenste einddatum:</string>
    <string name="seeking_reason">Wat is de reden dat je een woonruimte zoekt?</string>
    <string name="seeking_start">Vanaf:</string>
    <string name="seeking_end">Tot:</string>
    <string name="seeking_startDateHint">  DD-MM-JJJJ</string>
    <string name="seeking_endDateHint">  DD-MM-JJJJ</string>
    <string name="seeking_school">Welke opleiding/diploma\'s heb je afgerond?</string>
    <string name="seeking_schoolHint">  Middelbare school</string>
    <string name="seeking_schoolFutureHint">  HBO Informatica</string>
    <string name="seeking_birthHint">  DD-MM-JJJJ</string>
    <string name="seeking_phoneNumber">Telefoonnummer:</string>
    <string name="seeking_streetHint">  Straat</string>
    <string name="seeking_cityHint">  Woonplaats</string>
    <string name="seeking_codeHint">  Postcode</string>
    <string name="seeking_houseNumberHint">  Huisnummer</string>
    <string name="seeking_countryHint">  Land</string>
    <string name="seeking_phoneNumberHint">  Telefoonnummer</string>
    <string name="seeking_street">Straat:</string>
    <string name="seeking_city">Woonplaats:</string>
    <string name="seeking_code">Postcode:</string>
    <string name="seeking_houseNumber">Huisnummer:</string>
    <string name="seeking_country">Land:</string>
    <string name="seeking_birth">Geboortedatum:</string>
    <string name="seeking_schoolFuture_en">What education are you currently pursuing or planning to pursue?</string>
</resources>