<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MWG_Light">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewMatch"
        android:layout_centerHorizontal="true"
        android:text="@string/matchesText"
        android:textSize="60px" />
    <ImageView
        android:id="@+id/imageViewMatch"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        app:srcCompat="@drawable/matches_icon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewProfile"
        android:layout_centerHorizontal="true"
        android:text="@string/profielText"
        android:textSize="60px"

        />

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"></include>

    <ImageView
        android:id="@+id/imageViewChat"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/textView3"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/chat_icon" />

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@id/textView"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/account_icon" />



    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageViewChat"
        android:layout_centerHorizontal="true"
        android:text="@string/chatText"
        android:textSize="60px" />

</RelativeLayout>